@@ -272,6 +272,10 @@ m4kp,
 74kf,
 74kf1_1,
 74kf3_2,
+1004kc,
+1004kf2_1,
+1004kf,
+1004kf1_1,
 5kc,
 5kf,
 20kc,
