@@ -1,3 +1,8 @@
+2009-08-04  Sandra Loosemore  <sandra@codesourcery.com>
+
+	* doc/c-mips.texi (MIPS Opts): List 1004K options for -march.
+	* config/tc-mips.c (mips_cpu_info_table): Add 1004K cores.
+
 2009-08-04  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* config/tc-arm.c (my_get_expression): Detect missing expressions.
